--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 concurrency:
-  group: main
+  group: terraform-google-project-iam-custom-role
   cancel-in-progress: false
 
 jobs:
